# product-raspberry

./: CMakeLists.txt  readme.md  turenproc.service
configs/: broadcom_bcm2710_rpi3b_plus_defconfig
ota/: rokid_flash_ota_bin.conf  rokid_flash_package_bin.conf
workdir_asr_cn/: ctc.raspi.cfg  device.raspi.cfg  logging.conf  sbbf.raspi.cfg  word.meishile.cfg  word.ruoqi.cfg
workdir_asr_cn/model/emb/: symbol_table.txt
